added styling to contact section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <nav>
                 <ul>
                     <li>
+                        <a href="#calendar">Calendar</a>
+                    </li>
+                    <li>
                         <a href="">Documents</a>
                     </li>
                     <li>
