footer styling and added image

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
                 Get Started!
               </button>
             </div>     
-          </section>
+        </section>
+        <section id="calendar" class="events">
+            <h2>Events Calendar</h2>
+            <div class="event-calendar"></div>
+        </section>
         <section id="contact-us" class="contact">
             <div class="contact-info">
                 
