--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section id="contact-us" class="contact">
             <div class="contact-info">
                 
-                <div>
+                <div class="address">
                     <h3>BSA Troop 586</h3>
                     <p>
                       Any questions or concerns before signing up?
@@ -102,7 +102,7 @@
             </div>    
         </section>
         <footer>
-            <h2>Created by Glen Luersman 2022</h2>
+            <h2>&copy; Glen Luersman 2022</h2>
         </footer>
         <script src="./assets/js/script.js"></script>
     </body>
