style changes added HTML files

--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
                         <a href="#calendar">Calendar</a>
                     </li>
                     <li>
-                        <a href="">Documents</a>
+                        <a href="documents.html">Documents</a>
                     </li>
                     <li>
-                        <a href="">Photos</a>
+                        <a href="photos.html">Photos</a>
                     </li>
                     <li>
                         <a href="#contact-us">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="mum-festival.html">Mum Festival</a>
                     </li>
                 </ul>
             </nav>
