--- a/documents.html
+++ b/documents.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/documents-style.css">
     <title>Documents</title>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            <a href="./index.html">BSA Troop 586</a>
+        </h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="./index.html.#calendar">Calendar</a>
+                </li>
+                <li>
+                    <a href="documents.html">Documents</a>
+                </li>
+                <li>
+                    <a href="photos.html">Photos</a>
+                </li>
+                <li>
+                    <a href="./index.html.#contact-us">Contact Us</a>
+                </li>
+                <li>
+                    <a href="mum-festival.html">Mum Festival</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <aside class="docs">
+        <h2>Documents</h2>
+    </aside>
+    <footer>
+        <h2>&copy; Glen Luersman 2022</h2>
+    </footer>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
