added calendar placeholder

--- a/documents.html
+++ b/documents.html
@@ -38,6 +38,6 @@
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
-    <script src="./assets/js/script.js"></script>
+    <script src=""></script>
 </body>
 </html>
