--- a/photos.html
+++ b/photos.html
@@ -33,11 +33,12 @@
         </nav>
     </header>
     <section class="photo">
-        <h2>Photos</h2>
+        <h2>Photos
+        </h2>
     </section>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
-    <script src="./assets/js/script.js"></script>
+    <script src=""></script>
 </body>
 </html>
