--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
               <p>Fill out this form and one of our leaders will schedule a consult.</p>
             <!-- Add form element -->
             <form>
-              <label for="name">Enter full name:</label>
-              <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
+              <label for="name">Enter parent's full name:</label>
+              <input type="text" placeholder="Parent's Name" name="name" id="name" class="form-input" />
               <label for="scout-name">Enter future scout's name:</label>
               <input type="text" placeholder="Future Scout's Name" name="scout-name" id="scout-name" class="form-input" />
               <label for="email">Enter email address:</label>
               <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
               <label for="phone">Enter a telephone number:</label>
               <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
-              <button type="submit">
-                Get Started!
-              </button>
+              <button type="submit">Get Started!</button>
             </div>     
         </section>
         <section id="calendar" class="events">
             <h2>Events Calendar</h2>
-            <div class="event-calendar"></div>
+            <div class="event-calendar">
+                <img src="./assets/images/zg27ea6q6bcyvljzz24bts5tgu.png" alt="">
+            </div>
         </section>
         <section id="contact-us" class="contact">
             <div class="contact-info">
