added troop roster page

--- a/troop-roster.html
+++ b/troop-roster.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/documents-style.css">
-    <title>Documents</title>
+    <link rel="stylesheet" href="./assets/css/troop-roster-style.css">
+    <title>Troop Roster</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="./index.html.#calendar">Calendar</a>
+                    <a href="#calendar">Calendar</a>
                 </li>
                 <li>
                     <a href="documents.html">Documents</a>
@@ -24,7 +24,7 @@
                     <a href="photos.html">Photos</a>
                 </li>
                 <li>
-                    <a href="./index.html.#contact-us">Contact Us</a>
+                    <a href="#contact-us">Contact Us</a>
                 </li>
                 <li>
                     <a href="troop-roster.html">Troop Roster</a>
@@ -35,12 +35,11 @@
             </ul>
         </nav>
     </header>
-    <aside class="docs">
-        <h2>Documents</h2>
-    </aside>
+    <section class="roster">
+        <h2>Troop Roster</h2>
+    </section>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
-    <script src=""></script>
 </body>
 </html>
