--- a/mum-festival.html
+++ b/mum-festival.html
@@ -27,6 +27,9 @@
                     <a href="./index.html.#contact-us">Contact Us</a>
                 </li>
                 <li>
+                    <a href="troop-roster.html">Troop Roster</a>
+                </li>
+                <li>
                     <a href="mum-festival.html">Mum Festival</a>
                 </li>
             </ul>
