--- a/troop-roster.html
+++ b/troop-roster.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="https://glenluersman.github.io/index.html.#calendar">Calendar</a>
+                    <a href="https://glenluersman.github.io/troop-586/index.html.#calendar">Calendar</a>
                 </li>
                 <li>
                     <a href="documents.html">Documents</a>
