--- a/photos.html
+++ b/photos.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="https://glenluersman.github.io/index.html.#calendar">Calendar</a>
+                    <a href="./index.html.#calendar">Calendar</a>
                 </li>
                 <li>
                     <a href="documents.html">Documents</a>
@@ -24,7 +24,7 @@
                     <a href="photos.html">Photos</a>
                 </li>
                 <li>
-                    <a href="https://glenluersman.github.io/index.html.#contact-us">Contact Us</a>
+                    <a href="./index.html.#contact-us">Contact Us</a>
                 </li>
                 <li>
                     <a href="troop-roster.html">Troop Roster</a>
