changed events calendar image

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section id="calendar" class="events">
             <h2>Events Calendar</h2>
             <div class="event-calendar">
-                <img src="./assets/images/zg27ea6q6bcyvljzz24bts5tgu.png" alt="">
+                <img src="./assets/images/event-calendar.PNG" alt="">
             </div>
         </section>
         <section id="contact-us" class="contact">
