added calendar widget

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section id="calendar" class="events">
             <h2>Events Calendar</h2>
             <div class="event-calendar">
-                <img src="./assets/images/event-calendar.PNG" alt="">
+                <div class="elfsight-app-a962aade-39b3-4e37-a40d-767a26e88c26"></div>
             </div>
         </section>
         <section id="contact-us" class="contact">
@@ -111,5 +111,6 @@
             <h2>&copy; Glen Luersman 2022</h2>
         </footer>
         <script src="./assets/js/script.js"></script>
+        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     </body>
 </html>
