--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <h2>Get Started Today!</h2>
               <p>Fill out this form and one of our leaders will schedule a consult.</p>
             <!-- Add form element -->
-            <form>
+            <form method="post" name="newScoutForm" data-netlify="true">
               <label for="name">Enter parent's full name:</label>
               <input type="text" placeholder="Parent's Name" name="name" id="name" class="form-input" />
               <label for="scout-name">Enter future scout's name:</label>
@@ -87,7 +87,7 @@
                 
                 <div class="contact-form">
                     <h3>Contact Us</h3>
-                    <form>
+                    <form method="post" name="contactForm" data-netlify="true">
                         <label for="contact-name">Your Name</label>
                         <input type="text" id="contact-name" placeholder="Your Name" />
         
