added value to submit buttons

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
               <label for="phone">Enter a telephone number:</label>
               <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
-              <button type="submit">Get Started!</button>
+              <button type="submit" value="Send">Get Started!</button>
             </div>     
         </section>
         <section id="calendar" class="events">
@@ -94,7 +94,7 @@
                         <label for="contact-message">Message</label>
                         <textarea id="contact-message" placeholder="Message"></textarea>
         
-                        <button type="submit">Submit</button>
+                        <button type="submit" value="Send">Submit</button>
                     </form>
                 </div>
         
