--- a/mum-festival.html
+++ b/mum-festival.html
@@ -10,12 +10,12 @@
 <body>
     <header>
         <h1>
-            <a href="./index.html">BSA Troop 586</a>
+            <a href="./index.html">Troop 586</a>
         </h1>
         <nav>
             <ul>
                 <li>
-                    <a href="./index.html.#calendar">Calendar</a>
+                    <a href="https://troop586.com/index/#calendar">Calendar</a>
                 </li>
                 <li>
                     <a href="documents.html">Documents</a>
@@ -24,7 +24,7 @@
                     <a href="photos.html">Photos</a>
                 </li>
                 <li>
-                    <a href="./index.html.#contact-us">Contact Us</a>
+                    <a href="https://troop586.com/index/#contact-us">Contact Us</a>
                 </li>
                 <li>
                     <a href="troop-roster.html">Troop Roster</a>
