--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <h2>Get Started Today!</h2>
             <!-- Add form element -->
             <form method="post" name="newScoutForm" data-netlify="true">
-              <label for="name">Enter parent's full name:</label>
+              <label for="parent-name">Enter parent's full name:</label>
               <input type="text" placeholder="Parent's Name" name="parent-name" id="name" class="form-input" />
               <label for="scout-name">Enter future scout's name:</label>
               <input type="text" placeholder="Future Scout's Name" name="scout-name" id="scout-name" class="form-input" />
