--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
               <label for="phone">Enter a telephone number:</label>
               <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
               <button type="submit" value="Send">Get Started!</button>
+            </form>
             </div>     
         </section>
         <section id="calendar" class="events">
@@ -67,18 +68,20 @@
             <div class="contact-info">
                 
                 <div class="address">
-                    <h3>BSA Troop 586</h3>
+                    <h3>Troop 586</h3>
                     <p>
-                      Any questions or concerns before signing up?
+                      Any questions or concerns?
                       <br />
-                      Let us know and we'll be happy to talk to you!
+                      Let us know and we'll be
+                      <br />
+                      happy to talk to you!
                     </p>
                     <address>
                       377 N Third St <br/>
                       Tipp City, OH <br/>
                       45371 <br/>
                       P: 555.555.5555 <br/>
-                      E: <a href="mailto:"></a>
+                      E: <a href="mailto:troop586tippcity@gmail.com">troop586tippcity@gmail.com</a>
                     </address>
                 </div>
                 
