--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                       377 N Third St <br/>
                       Tipp City, OH <br/>
                       45371 <br/>
-                      P: 555.555.5555 <br/>
-                      E: <a href="mailto:troop586tippcity@gmail.com">troop586tippcity@gmail.com</a>
+                      Email: <a href="mailto:troop586tippcity@gmail.com?subject=Mail from Website">troop586tippcity@gmail.com</a>
                     </address>
                 </div>
                 
