--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
         </header>
         <section class="hero">
             <div class="hero-cta">
-              <h2>Start Building<br>
-                 Your Future<br>
-                  With Scouting.</h2>
+              <h2>Start Building Your<br>
+                  Future With Scouting.</h2>
               <p>
-                seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
+                Troop 586 strives to provide many opportunities for the boys to learn new skills while enjoying their experience in Scouting. 
+                Our goal is for every scout in the Troop to be given the opportunity to advance in rank and to achieve the highest rank in Scouting - Eagle Scout.  
+                To date, we have produced 19 Eagle Scouts with several more set to finish either merit badges or projects to reach Eagle. 
+                The young men in our troop are active in the National Youth Leadership Training (NYLT) and the Order of the Arrow, scouting's camping national honor society. 
+                Our troop teaches leadership, citizenship, and self respect while camping once a month, every month.  
+                Our troop mascot is a turtle named Soup and he is a known entity around Miami Valley Council.
               </p>
             </div>
             <div class="hero-form">
@@ -60,8 +64,8 @@
             </div>     
         </section>
         <section id="calendar" class="events">
-            <h2>Events Calendar</h2>
-            <div class="event-calendar"></div>
+            <h2 class="section-title">Events Calendar</h2>
+            <div class="elfsight-app-a962aade-39b3-4e37-a40d-767a26e88c26"></div>
         </section>
         <section id="contact-us" class="contact">
             <div class="contact-info">
