added image of troop mascot

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </nav>
         </header>
         <section class="hero">
+            <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
             <div class="hero-cta">
                 <h2>Start Building Your<br>
                     Future With Scouting.</h2>
@@ -64,13 +65,12 @@
             </form>
             </div>     
         </section>
-        <section id="calendar" class="events">
+        <section id="calendar" class="title">
             <h2 class="section-title">Events Calendar</h2>
             <div class="elfsight-app-a962aade-39b3-4e37-a40d-767a26e88c26"></div>
         </section>
         <section id="contact-us" class="contact">
             <div class="contact-info">
-                
                 <div class="address">
                     <h3>Troop 586</h3>
                     <p>
