--- a/mum-festival.html
+++ b/mum-festival.html
@@ -35,8 +35,8 @@
             </ul>
         </nav>
     </header>
-    <section class="mum">
-        <h2>Mum Festival</h2>
+    <section class="title">
+        <h2 class="section-title">Mum Festival</h2>
     </section>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
