--- a/photos.html
+++ b/photos.html
@@ -35,9 +35,8 @@
             </ul>
         </nav>
     </header>
-    <section class="photo">
-        <h2>Photos
-        </h2>
+    <section class="title">
+        <h2 class="section-title">Photos</h2>
     </section>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
