--- a/documents.html
+++ b/documents.html
@@ -35,9 +35,9 @@
             </ul>
         </nav>
     </header>
-    <aside class="docs">
-        <h2>Documents</h2>
-    </aside>
+    <section class="title">
+        <h2 class="section-title">Documents</h2>
+    </section>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
