Added troop roster

--- a/troop-roster.html
+++ b/troop-roster.html
@@ -41,33 +41,216 @@
     <section class="title">
         <h2 class="section-title">Troop Roster</h2>
     </section>
-    <section class="troop-roster">
-        <aside class="links">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="">Key 3</a>
-                    </li><br><br>
-                    <li>
-                        <a href="">Committee</a>
-                    </li><br><br>
-                    <li>
-                        <a href="">Scoutmasters</a>
-                    </li><br><br>
-                    <li>
-                        <a href="">Patrol Leaders</a>
-                    </li><br><br>
-                    <li>
-                        <a href="">Patrols</a>
-                    </li>
-                </ul>
-            </nav>
-        </aside>
-        <div id="cards-container"></div>
-    </section>
+    <div class="container">
+        <section class="cards-title">
+            <h3>Key 3</h3>
+        </section>
+        <section class="cards">
+            <article class="card">
+                <img src="./assets/images/scoutmaster.JPG" alt="">
+                <h4>Jim<br>Ridgeway</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/committee-chair.JPG" alt="">
+                <h4>Jon<br>Sears</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/charter-rep.JPG" alt="">
+                <h4>Cameron<br>Haller</h4>
+            </article>
+        </section>
+    </div>
+    <div class="container">
+        <section class="cards-title">
+            <h3>SPL and ASPL</h3>
+        </section>
+        <section class="cards">
+            <article class="card">
+                <img src="./assets/images/SPL.JPG" alt="">
+                <h4>Brighton S.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/ASPL.JPG" alt="">
+                <h4>Trevor H.</h4>
+            </article>
+        </section>
+        </section>
+    </div>
+    <div class="container">
+        <section class="cards-title">
+            <h3>Phoenix Patrol</h3>
+        </section>
+        <section class="cards">
+            <article class="card">
+                <img src="./assets/images/phoenix.JPG" alt="">
+                <h4>Dillen S.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/phoenix.JPG" alt="">
+                <h4>Garrett P.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/phoenix.JPG" alt="">
+                <h4>Leo H.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/phoenix.JPG" alt="">
+                <h4>Logan D.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/phoenix.JPG" alt="">
+                <h4>Mason H.</h4>
+            </article>
+        </section>
+    </div>
+    <div class="container">
+        <section class="cards-title">
+            <h3>The Banananadana's Patrol</h3>
+        </section>
+        <section class="cards">
+            <article class="card">
+                <img src="./assets/images/bananas.JPG" alt="">
+                <h4>Christian H.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/bananas.JPG" alt="">
+                <h4>Gavyn M.</h4>
+            </article>
+        </section>
+    </div>
+    <div class="container">
+        <section class="cards-title">
+            <h3>Infernos Patrol</h3>
+        </section>
+        <section class="cards">
+            <article class="card">
+                <img src="./assets/images/infernos.png" alt="">
+                <h4>Brighton S.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/infernos.png" alt="">
+                <h4>Gavin G.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/infernos.png" alt="">
+                <h4>Jackson C.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/infernos.png" alt="">
+                <h4>Trevor H.</h4>
+            </article>
+        </section>
+    </div>
+    <div class="container">
+        <section class="cards-title">
+            <h3>Wet Bandits Patrol</h3>
+        </section>
+        <section class="cards">
+            <article class="card">
+                <img src="./assets/images/wet-bandits.JPG" alt="">
+                <h4>Caleb L.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/wet-bandits.JPG" alt="">
+                <h4>Cayll L.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/wet-bandits.JPG" alt="">
+                <h4>Logan G.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/wet-bandits.JPG" alt="">
+                <h4>Isaac L.</h4>
+            </article>
+        </section>
+    </div>
+    <div class="container">
+        <section class="cards-title">
+            <h3>New Scout Patrol</h3>
+        </section>
+        <section class="cards">
+            <article class="card">
+                <img src="./assets/images/to-be-named.JPG" alt="">
+                <h4>Christopher L.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/to-be-named.JPG" alt="">
+                <h4>Graysen M</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/to-be-named.JPG" alt="">
+                <h4>Jeremy F.</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/to-be-named.JPG" alt="">
+                <h4>Maximilian M.</h4>
+            </article>
+        </section>
+    </div>
+    <div class="container">
+        <section class="cards-title">
+            <h3>Assistant Scoutmasters</h3>
+        </section>
+        <section class="cards">
+            <article class="card">
+                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
+                <h4>Blake<br>Dysinger</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
+                <h4>Glen<br>Luersman</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
+                <h4>Ian<br>Ridgeway</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
+                <h4>James<br>Ridgeway</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
+                <h4>Matt<br>Hollon</h4>
+            </article><article class="card">
+                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
+                <h4>Noah<br>Barnes</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
+                <h4>Stephen<br>Ridgeway</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
+                <h4>Tom<br>Dysinger</h4>
+            </article>
+        </section>
+    </div>
+    <div class="container">
+        <section class="cards-title">
+            <h3>Committee Members</h3>
+        </section>
+        <section class="cards">
+            <article class="card">
+                <img src="./assets/images/committee.JPG" alt="">
+                <h4>Dennis<br>Mullins</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/committee.JPG" alt="">
+                <h4>Melinda<br>Luersman</h4>
+            </article><article class="card">
+                <img src="./assets/images/committee.JPG" alt="">
+                <h4>Cid<br>Ridgeway</h4>
+            </article><article class="card">
+                <img src="./assets/images/committee.JPG" alt="">
+                <h4>Robert<br>Lesher</h4>
+            </article><article class="card">
+                <img src="./assets/images/committee.JPG" alt="">
+                <h4>Andrew<br>Luersman</h4>
+            </article>
+        </section>
+    </div>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
-    
 </body>
 </html>
