Added more committee members

--- a/troop-roster.html
+++ b/troop-roster.html
@@ -237,15 +237,30 @@
             <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Melinda<br>Luersman</h4>
-            </article><article class="card">
+            </article>
+            <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Cid<br>Ridgeway</h4>
-            </article><article class="card">
+            </article>
+            <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Robert<br>Lesher</h4>
-            </article><article class="card">
+            </article>
+            <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Andrew<br>Luersman</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/committee.JPG" alt="">
+                <h4>Angel<br>Grubbs</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/committee.JPG" alt="">
+                <h4>Ceana<br>Hollon</h4>
+            </article>
+            <article class="card">
+                <img src="./assets/images/committee.JPG" alt="">
+                <h4>Brittany<br>Cheadle</h4>
             </article>
         </section>
     </div>
