added positions and ranks

--- a/troop-roster.html
+++ b/troop-roster.html
@@ -49,14 +49,17 @@
             <article class="card">
                 <img src="./assets/images/scoutmaster.JPG" alt="">
                 <h4>Jim<br>Ridgeway</h4>
+                <p><b>Position:</b><br>SM</p>
             </article>
             <article class="card">
                 <img src="./assets/images/committee-chair.JPG" alt="">
                 <h4>Jon<br>Sears</h4>
+                <p><b>Position:</b><br>Chair</p>
             </article>
             <article class="card">
                 <img src="./assets/images/charter-rep.JPG" alt="">
                 <h4>Cameron<br>Haller</h4>
+                <p><b>Position:</b><br>COR</p>
             </article>
         </section>
     </div>
@@ -68,10 +71,14 @@
             <article class="card">
                 <img src="./assets/images/SPL.JPG" alt="">
                 <h4>Brighton S.</h4>
+                <p><b>Position:</b><br>SPL</p>
+                <p><b>Current Rank:</b><br>Tenderfoot</p>
             </article>
             <article class="card">
                 <img src="./assets/images/ASPL.JPG" alt="">
                 <h4>Trevor H.</h4>
+                <p><b>Position:</b><br>ASPL</p>
+                <p><b>Current Rank:</b><br>First Class</p>
             </article>
         </section>
         </section>
@@ -84,22 +91,32 @@
             <article class="card">
                 <img src="./assets/images/phoenix.JPG" alt="">
                 <h4>Dillen S.</h4>
+                <p><b>Position:</b><br><br></p>
+                <p><b>Current Rank:</b><br>Eagle Scout</p>
             </article>
             <article class="card">
                 <img src="./assets/images/phoenix.JPG" alt="">
                 <h4>Garrett P.</h4>
+                <p><b>Position:</b><br><br></p>
+                <p><b>Current Rank:</b><br>Eagle Scout</p>
             </article>
             <article class="card">
                 <img src="./assets/images/phoenix.JPG" alt="">
                 <h4>Leo H.</h4>
+                <p><b>Position:</b><br><br></p>
+                <p><b>Current Rank:</b><br>Eagle Scout</p>
             </article>
             <article class="card">
                 <img src="./assets/images/phoenix.JPG" alt="">
                 <h4>Logan D.</h4>
+                <p><b>Position:</b><br><br></p>
+                <p><b>Current Rank:</b><br>Life Scout</p>
             </article>
             <article class="card">
                 <img src="./assets/images/phoenix.JPG" alt="">
                 <h4>Mason H.</h4>
+                <p><b>Position:</b><br><br></p>
+                <p><b>Current Rank:</b><br>Eagle Scout</p>
             </article>
         </section>
     </div>
@@ -111,10 +128,14 @@
             <article class="card">
                 <img src="./assets/images/bananas.JPG" alt="">
                 <h4>Christian H.</h4>
+                <p><b>Position:</b><br><br></p>
+                <p><b>Current Rank:</b><br>Star Scout</p>
             </article>
             <article class="card">
                 <img src="./assets/images/bananas.JPG" alt="">
                 <h4>Gavyn M.</h4>
+                <p><b>Position:</b><br><br></p>
+                <p><b>Current Rank:</b><br>`Life Scout</p>
             </article>
         </section>
     </div>
@@ -126,18 +147,26 @@
             <article class="card">
                 <img src="./assets/images/infernos.png" alt="">
                 <h4>Brighton S.</h4>
+                <p><b>Position:</b><br>Librarian<br>Chaplain Aide</p>
+                <p><b>Current Rank:</b><br>Tenderfoot</p>
             </article>
             <article class="card">
                 <img src="./assets/images/infernos.png" alt="">
                 <h4>Gavin G.</h4>
+                <p><b>Position:</b><br>Assistant<br>Patrol Leader</p>
+                <p><b>Current Rank:</b><br>No Rank</p>
             </article>
             <article class="card">
                 <img src="./assets/images/infernos.png" alt="">
                 <h4>Jackson C.</h4>
+                <p><b>Position:</b><br>Patrol Leader</p>
+                <p><b>Current Rank:</b><br>Tenderfoot</p>
             </article>
             <article class="card">
                 <img src="./assets/images/infernos.png" alt="">
                 <h4>Trevor H.</h4>
+                <p><b>Position:</b><br><br></p>
+                <p><b>Current Rank:</b><br>First Class</p>
             </article>
         </section>
     </div>
@@ -149,18 +178,26 @@
             <article class="card">
                 <img src="./assets/images/wet-bandits.JPG" alt="">
                 <h4>Caleb L.</h4>
+                <p><b>Position:</b><br>Patrol Leader</p>
+                <p><b>Current Rank:</b><br>Scout</p>
             </article>
             <article class="card">
                 <img src="./assets/images/wet-bandits.JPG" alt="">
                 <h4>Cayll L.</h4>
+                <p><b>Position:</b><br><br></p>
+                <p><b>Current Rank:</b><br>No Rank</p>
             </article>
             <article class="card">
                 <img src="./assets/images/wet-bandits.JPG" alt="">
                 <h4>Logan G.</h4>
+                <p><b>Position:</b><br><br></p>
+                <p><b>Current Rank:</b><br>Scout</p>
             </article>
             <article class="card">
                 <img src="./assets/images/wet-bandits.JPG" alt="">
                 <h4>Isaac L.</h4>
+                <p><b>Position:</b><br>Assistant<br>Patrol Leader</p>
+                <p><b>Current Rank:</b><br>Tenderfoot</p>
             </article>
         </section>
     </div>
@@ -172,18 +209,26 @@
             <article class="card">
                 <img src="./assets/images/to-be-named.JPG" alt="">
                 <h4>Christopher L.</h4>
+                <p><b>Position:</b><br>Assistant<br>Patrol Leader</p>
+                <p><b>Current Rank:</b><br>No Rank</p>
             </article>
             <article class="card">
                 <img src="./assets/images/to-be-named.JPG" alt="">
                 <h4>Graysen M</h4>
+                <p><b>Position:</b><br>Scribe</p>
+                <p><b>Current Rank:</b><br>No Rank</p>
             </article>
             <article class="card">
                 <img src="./assets/images/to-be-named.JPG" alt="">
                 <h4>Jeremy F.</h4>
+                <p><b>Position:</b><br>Historian</p>
+                <p><b>Current Rank:</b><br>No Rank</p>
             </article>
             <article class="card">
                 <img src="./assets/images/to-be-named.JPG" alt="">
                 <h4>Maximilian M.</h4>
+                <p><b>Position:</b><br>Patrol Leader</p>
+                <p><b>Current Rank:</b><br>No Rank</p>
             </article>
         </section>
     </div>
@@ -195,33 +240,26 @@
             <article class="card">
                 <img src="./assets/images/assist-scoutmaster.JPG" alt="">
                 <h4>Blake<br>Dysinger</h4>
+                <p><b>Position:</b><br>ASM</p>
             </article>
             <article class="card">
                 <img src="./assets/images/assist-scoutmaster.JPG" alt="">
                 <h4>Glen<br>Luersman</h4>
-            </article>
-            <article class="card">
-                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
-                <h4>Ian<br>Ridgeway</h4>
-            </article>
-            <article class="card">
-                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
-                <h4>James<br>Ridgeway</h4>
+                <p><b>Position:</b><br>ASM</p>
             </article>
             <article class="card">
                 <img src="./assets/images/assist-scoutmaster.JPG" alt="">
                 <h4>Matt<br>Hollon</h4>
+                <p><b>Position:</b><br>ASM</p>
             </article><article class="card">
                 <img src="./assets/images/assist-scoutmaster.JPG" alt="">
                 <h4>Noah<br>Barnes</h4>
-            </article>
-            <article class="card">
-                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
-                <h4>Stephen<br>Ridgeway</h4>
+                <p><b>Position:</b><br>ASM</p>
             </article>
             <article class="card">
                 <img src="./assets/images/assist-scoutmaster.JPG" alt="">
                 <h4>Tom<br>Dysinger</h4>
+                <p><b>Position:</b><br>ASM</p>
             </article>
         </section>
     </div>
@@ -233,34 +271,57 @@
             <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Dennis<br>Mullins</h4>
+                <p><b>Position:</b><br>Treasurer</p>
             </article>
             <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Melinda<br>Luersman</h4>
+                <p><b>Position:</b><br>Activities<br>Coordinator</p>
             </article>
             <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Cid<br>Ridgeway</h4>
+                <p><b>Position:</b><br><br></p>
             </article>
             <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Robert<br>Lesher</h4>
+                <p><b>Position:</b><br>Fundraising</p>
             </article>
             <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Andrew<br>Luersman</h4>
+                <p><b>Position:</b><br>Membership<br>Coordinator</p>
             </article>
             <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Angel<br>Grubbs</h4>
+                <p><b>Position:</b><br>Secretary</p>
             </article>
             <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Ceana<br>Hollon</h4>
+                <p><b>Position:</b><br><br></p>
             </article>
             <article class="card">
                 <img src="./assets/images/committee.JPG" alt="">
                 <h4>Brittany<br>Cheadle</h4>
+                <p><b>Position:</b><br>Fundraising</p>
+            </article>
+            <article class="card">
+                <img src="./assets/images/committee.JPG" alt="">
+                <h4>Jon<br>Sears</h4>
+                <p><b>Position:</b><br>Chaplain</p>
+            </article>
+            <article class="card">
+                <img src="./assets/images/committee.JPG" alt="">
+                <h4>Matt<br>Hollon</h4>
+                <p><b>Position:</b><br>Equipment<br>Coordinator</p>
+            </article>
+            <article class="card">
+                <img src="./assets/images/committee.JPG" alt="">
+                <h4>Glen<br>Luersman</h4>
+                <p><b>Position:</b><br>Webmaster</p>
             </article>
         </section>
     </div>
