--- a/troop-roster.html
+++ b/troop-roster.html
@@ -135,7 +135,7 @@
                 <img src="./assets/images/bananas.JPG" alt="">
                 <h4>Gavyn M.</h4>
                 <p><b>Position:</b><br><br></p>
-                <p><b>Current Rank:</b><br>`Life Scout</p>
+                <p><b>Current Rank:</b><br>Life Scout</p>
             </article>
         </section>
     </div>
